src/Bicep.Core.Samples/Files/user_submitted/101/aadds-dual-region-replica-sets/main.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "languageVersion": "1.10-experimental",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_EXPERIMENTAL_WARNING": "Symbolic name support in ARM is experimental, and should be enabled for testing purposes only. Do not enable this setting for any production usage, or you may be unexpectedly broken at any time!",
    "_generator": {
      "name": "bicep",
      "version": "dev",
      "templateHash": "10735039051738294118"
    }
  },
  "parameters": {
    "domainName": {
      "type": "string",
      "defaultValue": "aaddscontoso.com"
    }
  },
  "resources": {
    "aadds": {
      "type": "Microsoft.AAD/domainServices",
      "apiVersion": "2020-01-01",
      "name": "[parameters('domainName')]",
      "location": "West Europe",
      "properties": {
        "domainName": "[parameters('domainName')]",
        "domainSecuritySettings": {
          "ntlmV1": "Enabled",
          "syncKerberosPasswords": "Enabled",
          "syncNtlmPasswords": "Enabled",
          "syncOnPremPasswords": "Enabled",
          "tlsV1": "Enabled"
        },
        "filteredSync": "Disabled",
        "ldapsSettings": {
          "externalAccess": "Disabled",
          "ldaps": "Disabled"
        },
        "notificationSettings": {
          "notifyDcAdmins": "Enabled",
          "notifyGlobalAdmins": "Enabled",
          "additionalRecipients": []
        },
        "replicaSets": [
          {
            "subnetId": "[reference('vnetEUS').subnets[0].id]",
            "location": "[reference('vnetEUS', '2020-06-01', 'full').location]"
          },
          {
            "subnetId": "[reference('vnetWEU').subnets[0].id]",
            "location": "[reference('vnetWEU', '2020-06-01', 'full').location]"
          }
        ],
        "sku": "Enterprise"
      },
      "dependsOn": [
        "vnetEUS",
        "vnetWEU"
      ]
    },
    "nsgEUS": {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2020-06-01",
      "name": "aadds-eus-nsg",
      "location": "East US",
      "properties": {
        "securityRules": [
          {
            "name": "AllowSyncWithAzureAD",
            "properties": {
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound",
              "protocol": "Tcp",
              "sourceAddressPrefix": "AzureActiveDirectoryDomainServices",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "443"
            }
          },
          {
            "name": "AllowPSRemoting",
            "properties": {
              "access": "Allow",
              "priority": 301,
              "direction": "Inbound",
              "protocol": "Tcp",
              "sourceAddressPrefix": "AzureActiveDirectoryDomainServices",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "5986"
            }
          },
          {
            "name": "AllowRD",
            "properties": {
              "access": "Allow",
              "priority": 201,
              "direction": "Inbound",
              "protocol": "Tcp",
              "sourceAddressPrefix": "CorpNetSaw",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "3389"
            }
          }
        ]
      }
    },
    "vnetEUS": {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2020-06-01",
      "name": "aadds-eus-vnet",
      "location": "East US",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.0.0.0/24"
          ]
        },
        "subnets": [
          {
            "name": "aadds-subnet",
            "properties": {
              "addressPrefix": "10.0.0.0/24",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'aadds-eus-nsg')]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "nsgEUS"
      ]
    },
    "nsgWEU": {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2020-06-01",
      "name": "aadds-weu-nsg",
      "location": "West Europe",
      "properties": {
        "securityRules": [
          {
            "name": "AllowSyncWithAzureAD",
            "properties": {
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound",
              "protocol": "Tcp",
              "sourceAddressPrefix": "AzureActiveDirectoryDomainServices",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "443"
            }
          },
          {
            "name": "AllowPSRemoting",
            "properties": {
              "access": "Allow",
              "priority": 301,
              "direction": "Inbound",
              "protocol": "Tcp",
              "sourceAddressPrefix": "AzureActiveDirectoryDomainServices",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "5986"
            }
          },
          {
            "name": "AllowRD",
            "properties": {
              "access": "Allow",
              "priority": 201,
              "direction": "Inbound",
              "protocol": "Tcp",
              "sourceAddressPrefix": "CorpNetSaw",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "3389"
            }
          }
        ]
      }
    },
    "vnetWEU": {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2020-06-01",
      "name": "aadds-weu-vnet",
      "location": "West Europe",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.1.0.0/24"
          ]
        },
        "subnets": [
          {
            "name": "aadds-subnet",
            "properties": {
              "addressPrefix": "10.1.0.0/24",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'aadds-weu-nsg')]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "nsgWEU"
      ]
    },
    "peerEUS": {
      "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
      "apiVersion": "2020-06-01",
      "name": "[format('{0}/{1}-peering-{2}', 'aadds-eus-vnet', 'aadds-eus-vnet', 'aadds-weu-vnet')]",
      "properties": {
        "allowVirtualNetworkAccess": true,
        "allowForwardedTraffic": true,
        "allowGatewayTransit": false,
        "useRemoteGateways": false,
        "remoteVirtualNetwork": {
          "id": "[resourceId('Microsoft.Network/virtualNetworks', 'aadds-weu-vnet')]"
        }
      },
      "dependsOn": [
        "vnetEUS",
        "vnetWEU"
      ]
    },
    "peerWEU": {
      "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
      "apiVersion": "2020-06-01",
      "name": "[format('{0}/{1}-peering-{2}', 'aadds-weu-vnet', 'aadds-weu-vnet', 'aadds-eus-vnet')]",
      "properties": {
        "allowVirtualNetworkAccess": true,
        "allowForwardedTraffic": true,
        "allowGatewayTransit": false,
        "useRemoteGateways": false,
        "remoteVirtualNetwork": {
          "id": "[resourceId('Microsoft.Network/virtualNetworks', 'aadds-eus-vnet')]"
        }
      },
      "dependsOn": [
        "vnetEUS",
        "vnetWEU"
      ]
    }
  }
}
